Fix issue with input button styling on safari
It looked cramped with little to no padding.
Slight adjustements to the form's UI.

--- a/css/style.css
+++ b/css/style.css
@@ -324,21 +324,21 @@ header {
 
 form {
     padding: 2rem 2rem;
-    box-shadow: 0px 0px 10px rgba(108, 99, 255, 0.3);
-    border-radius: 10px;
+    box-shadow: 0px 0px 6px rgba(108, 99, 255, 0.3);
+    border-radius: 6px;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
     margin: 4rem 0 2.5rem;
-    max-width: 480px;
+    max-width: 460px;
     width: 100%;
 }
 
 label {
     align-self: flex-start;
     color: #f5f5f5;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     font-weight: 500;
     letter-spacing: 0.08rem;
     margin: 0.8rem 0 0.4rem;
@@ -352,13 +352,13 @@ label[for="name"] {
 input, textarea {
     background-color: rgb(33, 33, 82);
     border: 1px solid rgba(108, 99, 255, 0.6);
-    border-radius: 4px;
+    border-radius: 3px;
     color: #f5f5f5;
     font-family: Poppins, helvetica, sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     letter-spacing: 0.06rem;
     outline: none;
-    padding: 0.7rem 0.9rem;
+    padding: 0.7rem;
     width: 100%;
 }
 
@@ -374,16 +374,19 @@ input:focus, textarea:focus {
     color: rgba(245, 245, 245, 0.5);
 }
 
-input[value="Submit"] {
+#submit {
     color: #FA58B6;
     cursor: pointer;
+    font-size: 0.75rem;
     font-weight: 600;
     letter-spacing: 0.08rem;
-    margin-top: 2rem;
+    margin-top: 1.8rem;
+    opacity: 1;
+    -webkit-appearance: none;
 }
 
-input[value="Submit"]:hover {
-    background-color: #FA58B6;
+#submit:hover {
+    background-color: #6c63ff;
     color: #1A1A40;
 }
 
